# fluffy-octo-fortnight

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/: issue-branch.yml  release-drafter.yml
.github/workflows/: ci_pip.yaml  on_create.yaml  on_issue_assign.yaml  on_release.yaml  style_check.yaml  uml.yml
Diagrams/: classes_easyTemplateLib.dot  packages_easyTemplateLib.dot
Examples/: ex1.py
Tools/Scripts/: branch_protection.py
easyTemplateLib/: __init__.py  interface.py
easyTemplateLib/Engines/: __init__.py  calculator1.py  calculator2.py  calculatorTemplate.py
easyTemplateLib/Objects/: fitting.py
tests/: test.qml  test_fitting.py
